--- a/requirements.txt
+++ b/requirements.txt
@@ -33,11 +33,12 @@ rsa==4.0
 scikit-learn==0.22.2.post1
 scipy==1.4.1
 six==1.14.0
-tensorboard==2.1.1
-tensorflow==2.1.0
-tensorflow-estimator==2.1.0
+tensorboard==2.0.0
+tensorflow==2.0.0
+tensorflow-estimator==2.0.0
 termcolor==1.1.0
 urllib3==1.25.8
 Werkzeug==1.0.0
 wrapt==1.12.1
 Flask==1.1.1
+gunicorn==20.0.4
